fixed profile page and logout route

--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -2,34 +2,47 @@
 
 {% block content %}
 
-<div id="warbler-hero" class="full-width"></div>
+<div id="warbler-hero " class="full-width " >
+  <img src="{{ user.header_image_url  }}" alt="Image for {{ user.username }}" id="profile-header" class="w-100" >
+
+</div>
+
+
 <img src="{{ user.image_url }}" alt="Image for {{ user.username }}" id="profile-avatar">
+
 <div class="row full-width">
   <div class="container">
     <div class="row justify-content-end">
+      <!-- col here -->
       <div class="col-9">
         <ul class="user-stats nav nav-pills">
+          <!-- messages  -->
           <li class="stat">
             <p class="small">Messages</p>
             <h4>
               <a href="/users/{{ user.id }}">{{ user.messages | length }}</a>
             </h4>
           </li>
+                    <!-- following  -->
+
           <li class="stat">
             <p class="small">Following</p>
             <h4>
               <a href="/users/{{ user.id }}/following">{{ user.following | length }}</a>
             </h4>
           </li>
+                    <!-- followers  -->
+
           <li class="stat">
             <p class="small">Followers</p>
             <h4>
               <a href="/users/{{ user.id }}/followers">{{ user.followers | length }}</a>
             </h4>
           </li>
+          <!-- likes -->
           <li class="stat">
             <p class="small">Likes</p>
-            <h4>TBD</h4>
+            <h4>{{user.likes | length}}</h4>
           </li>
           <div class="ml-auto">
             {% if g.user.id == user.id %}
@@ -47,6 +60,7 @@
               <button class="btn btn-outline-primary">Follow</button>
             </form>
             {% endif %}
+
             {% endif %}
           </div>
         </ul>
@@ -58,8 +72,8 @@
 <div class="row">
   <div class="col-sm-3">
     <h4 id="sidebar-username">@{{ user.username }}</h4>
-    <p>BIO HERE</p>
-    <p class="user-location"><span class="fa fa-map-marker"></span>LOCATION HERE</p>
+    <p>{{user.bio}}</p>
+    <p class="user-location"><span class="fa fa-map-marker"></span> {{user.location}}</p>
   </div>
 
   {% block user_details %}
