--- a/templates/users/followers.html
+++ b/templates/users/followers.html
@@ -12,6 +12,7 @@
               <div class="image-wrapper">
                 <img src="{{ follower.header_image_url }}" alt="" class="card-hero">
               </div>
+              <!-- follower card  -->
               <div class="card-contents">
                 <a href="/users/{{ follower.id }}" class="card-link">
                   <img src="{{ follower.image_url }}" alt="Image for {{ follower.username }}" class="card-image">
@@ -30,7 +31,8 @@
                 {% endif %}
 
               </div>
-              <p class="card-bio">BIO HERE</p>
+
+              <p class="card-bio">{{follower.bio}}</p>
             </div>
           </div>
         </div>
