--- a/templates/home.html
+++ b/templates/home.html
@@ -40,6 +40,7 @@
 
     <div class="col-lg-6 col-md-8 col-sm-12">
       <ul class="list-group" id="messages">
+
         {% for msg in messages %}
           <li class="list-group-item">
             <a href="/messages/{{ msg.id  }}" class="message-link"/>
@@ -51,15 +52,32 @@
               <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
               <p>{{ msg.text }}</p>
             </div>
+            <!-- add a conditional here to allowe user to only like other users warblers -->
+            {% if msg.user_id != g.user.id %}
             <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form">
+              <!-- validate the like button here  -->
+              <!-- if like button not cliked -->
+              {% if msg in g.user.likes %}
               <button class="
-                btn 
-                btn-sm 
-                {{'btn-primary' if msg.id in likes else 'btn-secondary'}}"
-              >
-                <i class="fa fa-thumbs-up"></i> 
+                btn
+                btn-sm
+                btn-danger">
+                <i class="fa fa-thumbs-down"></i>
               </button>
+
+              <!-- else -->
+              {% else %}
+              <button class="
+                btn
+                btn-sm
+                btn-primary">
+                <i class="fas fa-thumbs-up"></i>
+              </button>
+              {% endif %}
+              <!-- end else  {{'btn-primary' if msg in likes else 'btn-secondary'}}-->
             </form>
+            {% endif %}
+            <!-- end conditional here -->
           </li>
         {% endfor %}
       </ul>
