--- a/templates/messages/show.html
+++ b/templates/messages/show.html
@@ -10,7 +10,7 @@
           <a href="{{ url_for('users_show', user_id=message.user.id) }}">
             <img src="{{ message.user.image_url }}" alt="" class="timeline-image">
           </a>
-          <div class="message-area">
+          <div class="message-area container">
             <div class="message-heading">
               <a href="/users/{{ message.user.id }}">@{{ message.user.username }}</a>
               {% if g.user %}
@@ -22,18 +22,53 @@
                 {% elif g.user.is_following(message.user) %}
                   <form method="POST"
                         action="/users/stop-following/{{ message.user.id }}">
-                    <button class="btn btn-primary">Unfollow</button>
+                    <button class="btn btn-primary mr-1">Unfollow</button>
                   </form>
                 {% else %}
                   <form method="POST" action="/users/follow/{{ message.user.id }}">
-                    <button class="btn btn-outline-primary btn-sm">Follow</button>
+                    <button class="btn btn-outline-primary btn-sm mr-1">Follow</button>
                   </form>
                 {% endif %}
               {% endif %}
             </div>
+
             <p class="single-message">{{ message.text }}</p>
             <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
+            <!-- add like here -->
+            <!-- position this better -->
+            {% if g.user.id != message.user.id %}
+              <form method="POST" action="/users/add_like/{{ message.id }}" id="messages-form">
+              <!-- validate the like button here  -->
+              <!-- if like button not cliked -->
+              {% if message in g.user.likes %}
+              <button class="
+                btn
+                btn-sm
+                ml-3
+                mt-2
+                btn-danger">
+                <i class="fa fa-thumbs-down"></i>
+              </button>
+
+              <!-- else -->
+              {% else %}
+              <button class="
+                btn
+                btn-sm
+                ml-3
+                mt-2
+                btn-primary">
+                <i class="fas fa-thumbs-up"></i>
+              </button>
+              {% endif %}
+              </form>
+              {% endif %}
+
+
+
+            <!-- end like here  -->
           </div>
+
         </li>
       </ul>
     </div>
