--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -18,6 +18,18 @@
             <p>{{ message.text }}</p>
           </div>
 
+          <!-- like a message -->
+          {% if message.user_id != g.user.id%}
+          <form method="POST" action="/users/add_like/{{ message.id }}" id="messages-form">
+            <button class="
+              btn
+              btn-sm
+              {{'btn-primary' if message.id in likes else 'btn-secondary'}}">
+              <i class="fa fa-thumbs-up"></i>
+            </button>
+          </form>
+          {%endif %}
+          <!-- end if -->
         </li>
 
       {% endfor %}
